Update html bugs on index.html

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Debugging HTML Practice
+    <title>Debugging HTML Practice</title>
   </head>
   <body>
     <div class='profile'>
-        <h6>Profile Name</h6>
-        <div class='address'>Address</div>
+        <h1>Profile Name</h1>
+        <div class='address'><strong>Address:</strong></div>
 
         <div class='contact'>
           <strong>Email:</strong> <a href='mailto:firstname@surname.com'>firstname@surname.com</a>
@@ -17,12 +17,12 @@
 
         <div class='categories'>
           <h2>Categories</h2>
-          <li>
-            <ul>Lorem ipsum</ul>
-            <ul>dolor sit</ul>
-            <ul>amet</ul>
-            <ul>dolor sit</ul>
-          </li>
+          <ul>
+            <li>Lorem ipsum</li>
+            <li>dolor sit</li>
+            <li>amet</li>
+            <li>dolor sit</li>
+          </ul>
         </div>
 
       </div>
@@ -51,11 +51,10 @@
       <div class='footer'>
 
         <div class='footer-3-wide'>
-          <ul>
             <ol>
-              <a href='https://www.example.com/' target='_blank'>
+              <li><a href='https://www.example.com/' target='_blank'>
                 Lorem ipsum dolor sit amet
-              </a>
+              </a></li>
             </li>
             <li>
               <a href='https://www.example.com/' target='_blank'>
@@ -72,7 +71,7 @@
                 Lorem ipsum dolor sit amet
               </a>
 
-          </ul>
+          </ol>
         </div>
 
       </div>
